# uzor

./: .clang-format  .gitignore  CMakeLists.txt
code/: main.c  uz_entrypoint.c  uz_list.c  uz_list.h  uz_log.c  uz_log.h  uz_memory.c  uz_memory.h
